--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,7 +1,41 @@
-@import '_reset.scss';
+@import "_reset.scss";
 
 $var: white;
+$black: black;
+$white: white;
 
 body {
   background-color: $var;
+  display: flex;
+  padding: 0;
+  margin: 0;
+}
+
+.menu {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 250px;
+  flex-shrink: 0;
+  border-left: 1px solid #ccc;
+  min-height: 100vh;
+}
+
+.main {
+  flex-grow: 1;
+  padding: 2rem;
+}
+
+.cart {
+  flex-grow: 1;
+  padding: 1em;
+}
+
+.checkout {
+  padding: 1em;
+  width: 100%;
+  text-align: center;
+  background-color: $black;
+  border: none;
+  color: $white;
+  font-weight: bold;
 }
