--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,28 +6,48 @@ $white: white;
 
 body {
   background-color: $var;
-  display: flex;
   padding: 0;
   margin: 0;
 }
 
 .menu {
   display: flex;
-  flex-direction: column;
-  flex-basis: 250px;
-  flex-shrink: 0;
-  border-left: 1px solid #ccc;
-  min-height: 100vh;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  background: $black;
+  color: $white;
+
+  a {
+    color: $white;
+  }
 }
 
 .main {
-  flex-grow: 1;
   padding: 2rem;
 }
 
 .cart {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  border-left: 1px solid #ccc;
+  background: $white;
+  transform: translateX(100%);
+
+  &.is-open {
+    transform: translateX(0);
+  }
+}
+
+.cart-items {
   flex-grow: 1;
-  padding: 1em;
+  overflow-y: scroll;
+  padding: 1em 5px;
 }
 
 .checkout {
